atualização-do-site

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a href="#header">Home</a>
               </li>
               <li>
-                <a href="#services">Services</a>
+                <a href="#services">Serviços</a>
               </li>
               <li>
                 <a href="#portfolio">Portfolio</a>
@@ -61,7 +61,7 @@
                 <a href="#contact">Contact</a>
               </li>
               <li>
-                <a href="#hireme" class="active">Hire me</a>
+                <a href="#hireme" class="active">Contate-me</a>
               </li>
             </ul>
           </div>
@@ -94,10 +94,9 @@
     <section class="services section" id="services">
       <div class="container">
         <div class="section-header">
-          <h3 class="title" data-title="What I Do">Services</h3>
+          <h3 class="title" data-title="O que eu faço">Serviços</h3>
           <p class="text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias,
-            vero?
+            Abaixo está um pouco sobre quais são os meus serviços.
           </p>
         </div>
 
@@ -109,10 +108,14 @@
                 <img src="./img/code-icon.png" class="icon" alt="" />
                 <h3 class="title-sm"> OffSec</h3>
                 <p class="text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam
-                  est suscipit itaque?
+                  Offensive Security é uma abordagem de segurança da informação que se concentra em identificar e
+                  explorar vulnerabilidades em sistemas de computador, redes e aplicativos para melhorar sua segurança.
+                  Essa abordagem envolve testes de penetração, análise de vulnerabilidades e outros métodos de avaliação
+                  de segurança para descobrir falhas antes que sejam exploradas por invasores mal-intencionados. O
+                  objetivo final da Offensive Security é proteger as organizações e seus dados contra ameaças
+                  cibernéticas.
                 </p>
-                <a href="#" class="btn small">Read more</a>
+                <a href="#" class="btn small">Ler mais</a>
               </div>
             </div>
           </div>
@@ -123,10 +126,14 @@
                 <img src="./img/code-icon.png" class="icon" alt="" />
                 <h3 class="title-sm">Web Development</h3>
                 <p class="text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Dolores suscipit nobis dolore?
+                  Web Development é o processo de criação de sites e aplicativos web, que envolve várias etapas, como
+                  design, programação, teste e implantação. O desenvolvimento web geralmente envolve o uso de linguagens
+                  de programação como HTML, CSS, JavaScript e PHP, bem como frameworks e bibliotecas como React, Angular
+                  e Node.js. Além disso, a segurança e a usabilidade são aspectos importantes do desenvolvimento web. O
+                  objetivo final do desenvolvimento web é criar sites e aplicativos web funcionais, atraentes e
+                  intuitivos que atendam às necessidades dos usuários.
                 </p>
-                <a href="#" class="btn small">Read more</a>
+                <a href="#" class="btn small">Ler mais</a>
               </div>
             </div>
           </div>
@@ -136,12 +143,16 @@
             <div class="card" data-card="App">
               <div class="card-content z-index">
                 <img src="./img/app-icon.png" class="icon" alt="" />
-                <h3 class="title-sm">App Development</h3>
+                <h3 class="title-sm">Mobile Development</h3>
                 <p class="text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Voluptatum hic veniam nihil.
+                  Mobile Development é o processo de criação de aplicativos móveis para smartphones e tablets. Envolve a
+                  programação de aplicativos para iOS e Android, utilizando linguagens de programação como Swift, Java e
+                  Kotlin. O objetivo do desenvolvimento de aplicativos móveis é criar aplicativos que ofereçam uma
+                  experiência de usuário otimizada em dispositivos móveis, com recursos como telas sensíveis ao toque,
+                  notificações push e integração com hardware como câmeras e sensores. O desenvolvimento de aplicativos
+                  móveis também deve levar em consideração a segurança e a privacidade dos usuários.
                 </p>
-                <a href="#" class="btn small">Read more</a>
+                <a href="#" class="btn small">Ler mais</a>
               </div>
             </div>
           </div>
@@ -164,7 +175,7 @@
 
       <div class="container">
         <div class="section-header">
-          <h3 class="title" data-title="My works">Portfolio</h3>
+          <h3 class="title" data-title="Meus Trabalhos">Portfolio</h3>
         </div>
 
         <div class="section-body">
@@ -184,6 +195,18 @@
                   <div class="plus"></div>
                   <div class="img-description">
                     <h3>Web Development</h3>
+                    <h5>View Demo</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="grid-item appdev">
+              <div class="gallery-image">
+                <img src="./img/portfolio/MobileDev.jpg" alt="" />
+                <div class="img-overlay">
+                  <div class="plus"></div>
+                  <div class="img-description">
+                    <h3>App Development</h3>
                     <h5>View Demo</h5>
                   </div>
                 </div>
@@ -287,7 +310,7 @@
             </div>
           </div>
           <div class="more-folio">
-            <a href="#" class="btn">More Folio</a>
+            <a href="#" class="btn">Mais Projetos</a>
           </div>
         </div>
       </div>
@@ -296,17 +319,16 @@
     <section class="about section" id="about">
       <div class="container">
         <div class="section-header">
-          <h3 class="title" data-title="Who Am I">About me</h3>
+          <h3 class="title" data-title="Quem sou eu">Sobre mim</h3>
         </div>
 
         <div class="section-body grid-2">
           <div class="column-1">
-            <h3 class="title-sm">Hello, I'm</h3>
+            <h3 class="title-sm">Olá, eu sou</h3>
             <p class="text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Praesentium distinctio doloribus quam? Ut, laudantium a dolore,
-              minima repudiandae iure iste molestiae exercitationem earum
-              neque tempora?
+              A Pietra Valentina, Desenvolvedora full-stack, atualmente estudando para ser uma DevFullStack, comecei a
+              estudar desenvolvimento aos 18 Anos, quando comecei foi como dev front-end, hoje estudo para ser
+              full-stack e estudo OffSec, e desde sempre tive uma paixaão muito grande por tecnologia.
             </p>
             <div class="skills">
               <div class="skill html">
@@ -391,7 +413,7 @@
     <section class="testimonials section" id="testimonials">
       <div class="container">
         <div class="section-header">
-          <h3 class="title" data-title="What People Say">Testimonials</h3>
+          <h3 class="title" data-title="O que as pessoas dizem">Depoimentos dos Clientes</h3>
         </div>
 
         <div class="testi-content grid-2">
@@ -500,10 +522,14 @@
       <div class="container">
         <div class="contact-box">
           <div class="contact-info">
-            <h3 class="title">Get in touch</h3>
+            <h3 class="title">Entre em contato</h3>
             <p class="text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
-              rerum odio incidunt doslorum officia dolorem eaque aprim?
+              Se você tem interesse em desenvolver um projeto e precisa de ajuda para colocá-lo em prática, não hesite
+              em entrar em contato! Podemos discutir ideias, objetivos e definir um plano de ação para que seu projeto
+              seja um sucesso. Com a colaboração e comprometimento de uma desenvolvedora dedicada, podemos transformar
+              suas
+              ideias em realidade e alcançar resultados incríveis. Não perca mais tempo, vamos falar sobre seu projeto
+              agora mesmo!
             </p>
             <div class="information-wrap">
               <div class="information">
@@ -538,14 +564,17 @@
 
     <section class="hireme" id="hireme">
       <div class="container">
-        <h3 class="title">Let's talk about a project</h3>
+        <h3 class="title">Vamos falar sobre um projeto</h3>
         <p class="text">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio,
-          culpa. Commodi suscipit animi officia dignissimos unde, ipsum fugiat
-          consequuntur, fugit ratione vel aperiam, similique distinctio
-          mollitia repellendus quasi rem vero!
+          Um projeto pode ser uma excelente oportunidade para aplicar suas habilidades e conhecimentos em uma tarefa
+          específica. Mas, para que um projeto seja bem-sucedido, é necessário um planejamento adequado, definindo
+          objetivos claros e estabelecendo um cronograma viável. Além disso, é importante ter uma equipe engajada e
+          comprometida em contribuir para o sucesso do projeto. Ao finalizar um projeto, é gratificante olhar para trás
+          e ver todo o trabalho duro que foi realizado e os resultados alcançados. Vamos falar sobre um projeto? Se você
+          tem algum em mente ou está buscando inspiração, vamos conversar e ver como podemos transformar ideias em
+          realidade!
         </p>
-        <a href="#" class="btn">Hire me</a>
+        <a href="#" class="btn">Contate-me</a>
       </div>
     </section>
   </main>
@@ -554,10 +583,10 @@
     <div class="container">
       <div class="grid-4">
         <div class="grid-4-col footer-about">
-          <h3 class="title-sm">About</h3>
+          <h3 class="title-sm">Sobre</h3>
           <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
-            officiis quo officia quia?
+            Este portfolio foi realizado por Pietra Valentina, afins de ser algo profissional e onde pode-se verem seus
+            projetos e trabalhos futuros.
           </p>
         </div>
 
@@ -565,48 +594,48 @@
           <h3 class="title-sm">Links</h3>
           <ul>
             <li>
-              <a href="#services">Services</a>
+              <a href="#services">Serviços</a>
             </li>
             <li>
               <a href="#portfolio">Portfolio</a>
             </li>
             <li>
-              <a href="#about">About</a>
+              <a href="#about">Sobre Mim</a>
             </li>
             <li>
-              <a href="#testimonials">Testimonials</a>
+              <a href="#testimonials">Depoimentos</a>
             </li>
             <li>
-              <a href="#contact">Contact</a>
+              <a href="#contact">Contato</a>
             </li>
           </ul>
         </div>
 
         <div class="grid-4-col footer-links">
-          <h3 class="title-sm">Services</h3>
+          <h3 class="title-sm">Serviços</h3>
           <ul>
             <li>
-              <a href="#">Web Design</a>
+              <a href="#">Offensive Security</a>
             </li>
             <li>
               <a href="#">Web Dev</a>
             </li>
             <li>
-              <a href="#">App Design</a>
+              <a href="#">Mobile Development</a>
             </li>
             <li>
-              <a href="#">Marketing</a>
+              <a href="#">Manutenção de Rede e computadores</a>
             </li>
             <li>
-              <a href="#">UI Design</a>
+              <a href="#">Front-end Development</a>
             </li>
           </ul>
         </div>
 
         <div class="grid-4-col footer-newstletter">
-          <h3 class="title-sm">Subscribe</h3>
+          <h3 class="title-sm">Inscreva-se no Email</h3>
           <p class="text">
-            Lorem ipsum dolor, sit amet ipsum dolor sit amet.
+            Encaminhe um email para falarmos sobre projetos que queiram realizar e trocar conhecimentos.
           </p>
           <div class="footer-input-wrap">
             <input type="email" class="footer-input" placeholder="Email" />
