--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 <a href="#portfolio">Portfolio</a>
               </li>
               <li>
-                <a href="#about">About</a>
+                <a href="#about">Sobre mim</a>
               </li>
               <li>
-                <a href="#testimonials">Testimonials</a>
+                <a href="#testimonials">Depoimentos</a>
               </li>
               <li>
-                <a href="#contact">Contact</a>
+                <a href="#contact">Contato</a>
               </li>
               <li>
                 <a href="#hireme" class="active">Contate-me</a>
