--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                 </div>
               </div>
             </div>
-            <a href="#" class="btn">Read more</a>
+            <a href="#" class="btn">Ver mais</a>
           </div>
 
           <div class="column-2 image">
