ATUALIZAÇÃO DE CURRICULO

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               Olá, sou uma Desenvolvedora Front-end, OffSec e Desenvolvedora Mobile.
               Estudo desenvolvimento e computação no geral há quase 2 anos.
             </p>
-            <a href="./img/Currículo Pietra Valentina F Himmelsbach.pdf" class=" btn " download="">Download CV</a>
+            <a href="./img/CV Pietra Desenvolvedora .pdf" class=" btn " download="">Download CV</a>
           </div>
 
           <div class="column-2 image">
