--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="column-1">
             <h1 class="header-title">Pietra Valentina</h1>
             <p class="text">
-              Olá, sou uma Desenvolvedora Front-end, OffSec e Desenvolvedora Mobile.
+              Olá, sou uma Desenvolvedora Front-end e mobile.
               Estudo desenvolvimento e computação no geral há quase 2 anos.
             </p>
             <a href="./img/CV Pietra Desenvolvedora .pdf" class=" btn " download="">Download CV</a>
@@ -110,10 +110,6 @@
                 <p class="text">
                   Offensive Security é uma abordagem de segurança da informação que se concentra em identificar e
                   explorar vulnerabilidades em sistemas de computador, redes e aplicativos para melhorar sua segurança.
-                  Essa abordagem envolve testes de penetração, análise de vulnerabilidades e outros métodos de avaliação
-                  de segurança para descobrir falhas antes que sejam exploradas por invasores mal-intencionados. O
-                  objetivo final da Offensive Security é proteger as organizações e seus dados contra ameaças
-                  cibernéticas.
                 </p>
                 <a href="#" class="btn small">Ler mais</a>
               </div>
@@ -128,10 +124,7 @@
                 <p class="text">
                   Web Development é o processo de criação de sites e aplicativos web, que envolve várias etapas, como
                   design, programação, teste e implantação. O desenvolvimento web geralmente envolve o uso de linguagens
-                  de programação como HTML, CSS, JavaScript e PHP, bem como frameworks e bibliotecas como React, Angular
-                  e Node.js. Além disso, a segurança e a usabilidade são aspectos importantes do desenvolvimento web. O
-                  objetivo final do desenvolvimento web é criar sites e aplicativos web funcionais, atraentes e
-                  intuitivos que atendam às necessidades dos usuários.
+                  de programação como HTML, CSS, JavaScript e PHP.
                 </p>
                 <a href="#" class="btn small">Ler mais</a>
               </div>
@@ -147,10 +140,7 @@
                 <p class="text">
                   Mobile Development é o processo de criação de aplicativos móveis para smartphones e tablets. Envolve a
                   programação de aplicativos para iOS e Android, utilizando linguagens de programação como Swift, Java e
-                  Kotlin. O objetivo do desenvolvimento de aplicativos móveis é criar aplicativos que ofereçam uma
-                  experiência de usuário otimizada em dispositivos móveis, com recursos como telas sensíveis ao toque,
-                  notificações push e integração com hardware como câmeras e sensores. O desenvolvimento de aplicativos
-                  móveis também deve levar em consideração a segurança e a privacidade dos usuários.
+                  Kotlin.
                 </p>
                 <a href="#" class="btn small">Ler mais</a>
               </div>
@@ -212,18 +202,6 @@
                 </div>
               </div>
             </div>
-            <div class="grid-item appdev">
-              <div class="gallery-image">
-                <img src="./img/portfolio/MobileDev.jpg" alt="" />
-                <div class="img-overlay">
-                  <div class="plus"></div>
-                  <div class="img-description">
-                    <h3>App Development</h3>
-                    <h5>View Demo</h5>
-                  </div>
-                </div>
-              </div>
-            </div>
             <div class="grid-item  webdev">
               <div class="gallery-image">
                 <img src="./img/portfolio/developerment.jpg" alt="" />
@@ -236,18 +214,6 @@
                 </div>
               </div>
             </div>
-            <div class="grid-item webdev">
-              <div class="gallery-image">
-                <img src="./img/portfolio/desenvolvimento-web.jpg" alt="" />
-                <div class="img-overlay">
-                  <div class="plus"></div>
-                  <div class="img-description">
-                    <h3>Web Development</h3>
-                    <h5>View Demo</h5>
-                  </div>
-                </div>
-              </div>
-            </div>
             <div class="grid-item appdev">
               <div class="gallery-image">
                 <img src="./img/portfolio/MobileDev.jpg" alt="" />
@@ -279,30 +245,6 @@
                   <div class="plus"></div>
                   <div class="img-description">
                     <h3>App Development</h3>
-                    <h5>View Demo</h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="grid-item ui webdev">
-              <div class="gallery-image">
-                <img src="./img/portfolio/desenvolvimento-web.jpg" alt="" />
-                <div class="img-overlay">
-                  <div class="plus"></div>
-                  <div class="img-description">
-                    <h3>Web Development</h3>
-                    <h5>View Demo</h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="grid-item ui webdev">
-              <div class="gallery-image">
-                <img src="./img/portfolio/developerment.jpg" alt="" />
-                <div class="img-overlay">
-                  <div class="plus"></div>
-                  <div class="img-description">
-                    <h3>Web Development</h3>
                     <h5>View Demo</h5>
                   </div>
                 </div>
